# Torture

./: .gitignore  Build.bat  CMakeLists.txt  Helper.h  Model.cpp  Model.h  RenderApplication.cpp  RenderApplication.h  StepTimer.h  TortureTODO.txt  WindowApplication.cpp  basic.hlsl  main.cpp  readme.md
shaders/: HLSLCompatible.h  basic.hlsl  basic_color.hlsl  common.hlsl  deferred.hlsl  fullscreenVS.hlsl  gbuffer.hlsl  hiz.hlsl  raytracing.hlsl  raytracingHelper.hlsli  raytracing_shadow.hlsl
sources/: DX12.cpp  DX12.h  GraphicsTypes.cpp  GraphicsTypes.h  Helper.cpp  Helper.h  Model.cpp  Model.h  PCH.h  RenderApplication.cpp  RenderApplication.h  SimpleCamera.cpp  SimpleCamera.h  StepTimer.h  Utility.h  WindowApplication.cpp  WindowApplication.h  main.cpp
